typos and syntax

--- a/_posts/articles/2016-08-15-the-start.md
+++ b/_posts/articles/2016-08-15-the-start.md
@@ -16,15 +16,15 @@ image:
 ### Food
 We all love food... we'll I do, and luckily for you I also like to share recipes.
 
-### Cooking ~ Science ~ Coding
-Cooking, like science and coding involves several iterations, failed experiments, and "this could be improved". So this is the place will I will put mine modifications to recipes, so that other can use. This being GitHub, it also means that others can see what went wrong, that the recipe, and improve it. 
 
-<!-- ### Creating pages manually
-If you prefer to not use the automatic generator, push a branch named `gh-pages` to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.
- -->
+### Cooking ~ Science ~ Coding
+Cooking, like science and coding involves several iterations, failed experiments, and "this could be improved". So this is the place where modifications to recipes will be recorded so that our future selfs and others can use them. This being GitHub, it also means that others can see what went wrong and improve on it. 
+
  
 ### Authors and Contributors
 It will be mostly done by me, @adomingues, with the help of my partner in crime, AF, which does not have a GitHub account. Yet.
+
+The recipes are sourced from a few cookbooks, the internet and friends/family. Whenever possible the source will be clearly stated.
 
 ### Contact
 Tips, hints, and cookies to my [inbox](amjdomingues@gmail.com).
