replaced links to images now hosted on github

--- a/_posts/blog/2016-10-03-Hommous.md
+++ b/_posts/blog/2016-10-03-Hommous.md
@@ -18,7 +18,7 @@ This a staple or middle-eastern food but it is far from exotic to prepare. Very 
 
 Hommous is also one of those dishes that are available pre-prepared in supermarkets, but it takes so little time and effort, that I don't see why one should not take control of the ingredients that one ingests instetad of byuing something with added (unnecessary) ingredients: all you need are some canned chickpeas, tahini, lemon, garlic and you are set to go. All things that I keep in the pantry for an emergency. 
 
-![The middle east at the tip of your carrot.](https://dl.dropboxusercontent.com/u/9519660/foodforthepeople/img/Hommous.jpg)
+![The middle east at the tip of your carrot.]({{ site.url }}/images/img/Hommous.jpg)
 
 Even though the paprika and parsley are optional, I like the color and flavor that they bring. And this is the basic version. There some more elaborate versions of the dish, but judging from who successful this version has been with friends, I will keep it simple - the People does not over-complicate.
 
