--- a/_posts/blog/2020-12-20-Bancakes.md
+++ b/_posts/blog/2020-12-20-Bancakes.md
@@ -28,7 +28,7 @@ The recipe does have a tricky bit. When frying there a few things to pay attenti
 
 ![Bancake with coulis]({{ site.url }}/images/img/Bancake_with_coulis.jpg)
 
-Serve it with anything you like! Sone of our regular combinations:
+Serve it with anything you like! Some of our regular combinations:
 
 - soft goat cheese with honey or jam
 - peanut butter
@@ -47,7 +47,7 @@ Serve it with anything you like! Sone of our regular combinations:
 ## Tips
 
 - Freeze peeled overripe bananas and use them for this dish. Why waste food?
-- If the bananas are large add a an extra egg.
+- If the bananas are large add an extra egg.
 - Play around with the spices and flavorings
 
 
@@ -68,8 +68,8 @@ I basically collated the suggestions from [this thread](https://www.reddit.com/r
 
 * Bananas: 2, ripe, medium size
 * Eggs: 4
-* Coconut four: 1 tbsp
-* Coconut butter: 1 tbsp, or enough to cover the pan with a thin layer
+* Coconut flour: 1 tbsp
+* Butter: 1 tbsp, or enough to cover the pan with a thin layer
 * Vanilla extract: one drop
 * Cinnamon powder: two pinches
 * Nutmeg powder: one pinch 
